--- a/public/index.html
+++ b/public/index.html
@@ -26,5 +26,16 @@
 <body>
   <div id="root"></div>
   <script src="./generated/bundle.js"></script>
+  <script>
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', function() {
+      navigator.serviceWorker.register('./cacheServiceWorker.js').then(function(registration) {
+        console.log('ServiceWorker registration successful with scope: ', registration.scope);
+      }, function(err) {
+        console.log('ServiceWorker registration failed: ', err);
+      });
+    });
+  }
+  </script>
 </body>
 </html>
